# number-sums-solver

./: .gitignore  README.md  pyproject.toml
data/: dummy_puzzles.xlsx
demo/: demo.ipynb
number_sums_solver/components/: colors.py  group.py  matrix.py  solver.py  square.py  utils.py
number_sums_solver/images/: matrix_image.py  region.py  region_funcs.py  tile.py
number_sums_solver/misc/: helpers.py
src/number_sums/components/: group.py  matrix.py  solver.py
tests/: test_colors.py  test_group.py  test_matrix.py  test_matrix_image.py  test_region.py  test_solver.py  test_square.py  test_tile.py  test_utils.py
